<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_ingredients"
        android:layout_margin="@dimen/default_margin"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_step_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>